<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">aget</string>
    <string name="go_title">Go</string>
    <string name="load_files_title">Load files list…</string>
    <string name="files_to_download_label">Files to download:</string>
    <string name="no_content_handler_title">Cannot view filesystem!</string>
    <string name="no_content_handler_message">
        There is no application installed to browse filesystem for file.
        Please, install file viewer (e.g. Total Commander).
    </string>
    <string name="failed_to_load_list_title">Failed to load list!</string>
    <string name="failed_to_load_list_message">
        Cannot read list of files that you have chosen.
    </string>
    <string name="OK">OK</string>
    <string name="change_dest_title">…</string>
    <string name="destination_folder_label">Destination folder:</string>
</resources>
