<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:text="@string/destination_folder_label" android:textIsSelectable="false"
              android:gravity="center_horizontal"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:measureWithLargestChild="true"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/destDirTextView" android:layout_weight="10" android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:textIsSelectable="false" android:textSize="@dimen/dest_folder_text_size"
                />
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_dest_title"
                android:id="@+id/changeDestButton"
                android:onClick="chooseDestinationDir"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:measureWithLargestChild="true">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_files_title"
                android:id="@+id/loadListButton" android:layout_weight="1" android:onClick="openFilesToLoadActivity"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_title"
                android:id="@+id/goButton" android:layout_gravity="left" android:minWidth="100dp"
                android:onClick="launchDownloads" android:enabled="false"/>
    </LinearLayout>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/files_to_download_label"
            android:textIsSelectable="false" android:gravity="center_horizontal"/>
    <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fileListView"/>
</LinearLayout>

